fix(Button): fix white space behavior

--- a/packages/components/src/components/Button/Button.module.scss
+++ b/packages/components/src/components/Button/Button.module.scss
@@ -18,6 +18,7 @@
   align-items: center;
   grid-template-areas: "content";
   width: fit-content;
+  white-space: nowrap;
 
   @include focus.focus;
 
@@ -112,14 +113,14 @@
   @mixin variant($color, $variant) {
     &:where(.#{$color}.#{$variant}) {
       background-color: var(
-                      --button--#{$color}-#{$variant}-background-color--default
+        --button--#{$color}-#{$variant}-background-color--default
       );
 
       color: var(--button--#{$color}-#{$variant}-content-color--default);
 
       &:hover {
         background-color: var(
-                        --button--#{$color}-#{$variant}-background-color--hover
+          --button--#{$color}-#{$variant}-background-color--hover
         );
 
         color: var(--button--#{$color}-#{$variant}-content-color--hover);
@@ -127,7 +128,7 @@
 
       &[data-pressed] {
         background-color: var(
-                        --button--#{$color}-#{$variant}-background-color--pressed
+          --button--#{$color}-#{$variant}-background-color--pressed
         );
 
         color: var(--button--#{$color}-#{$variant}-content-color--pressed);
@@ -138,7 +139,9 @@
       &.isPending,
       &.isFailed,
       &.isSucceeded {
-        background-color: var(--button--#{$color}-#{$variant}-background-color--disabled);
+        background-color: var(
+          --button--#{$color}-#{$variant}-background-color--disabled
+        );
         color: var(--button--#{$color}-#{$variant}-content-color--disabled);
       }
     }
